TL-26771 theme_legacy: fix layout bug in Engage

--- a/server/theme/legacy/scss/totara/core.scss
+++ b/server/theme/legacy/scss/totara/core.scss
@@ -60,6 +60,12 @@ body {
   .pagelayout-legacynolayout & {
     padding-left: 0;
     padding-right: 0;
+    .row {
+      margin-right: 0;
+      .col-md-12 {
+        padding-right: 0;
+      }
+    }
   }
 }
 
